--- a/style.css
+++ b/style.css
@@ -39,14 +39,14 @@
 
   .card {
       height: 30vh;
-      width: 20vw;
+      width: 15vw;
       margin: 10px;
       padding:5px;
       text-align: center;
-      box-shadow: 0px 0px 20px rgb(144, 144, 144);
+      box-shadow: 0px 0px 25px rgb(40, 40, 40);
       background-color: rgb(255, 255, 255);
 
-      color: rgb(0, 0, 0);
+      color: rgb(3, 3, 3);
       font-size: larger;
       font-family: sans-serif;
       font-weight: 700;
@@ -57,7 +57,7 @@
       height: 60%;
       object-fit: contain;
       padding-bottom:5%;
-      /* object-fit: cover; */
+      border:none;
 
       /* margin-bottom: 10%; */
   }
@@ -114,6 +114,7 @@
       height: 100vh;
       width: 100%;
       background-color: transparent;
+      background-image: linear-gradient(190deg, #ff4081, rgb(216, 136, 136));
 
 
   }
@@ -143,8 +144,8 @@
 
       border-radius: 6px;
       color: rgb(255, 79, 108);
-      height: 15%;
-      width: 70%;
+      height: 13%;
+      width: 55%;
       box-shadow: none;
       border: 4px solid rgb(255, 79, 108);
       background-color: transparent;
@@ -171,3 +172,13 @@
       margin-bottom: 2vh;
       border: 3px solid #FF5252;
   }
+
+  .cardimg{
+    background-image: url(orangeclay.png);
+    background-size: cover;
+    border: none;
+    padding: none;
+    margin: none;
+  }
+
+
